--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Amazing Shoes</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body>
       
     <header class="hero">
       <div class="container">
-        <h1 class="main-text">Amazing shoes at an amazing price</h1>
+        <h1 class="primary-title">Amazing shoes at an amazing price</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis, itaque?</p>
         <a href="#" class="btn">See what we have</a>
       </div>
