--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
       
     <header class="hero">
-      <div class="container">
+      <div class="container spacing">
         <h1 class="primary-title">Amazing shoes at an amazing price</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis, itaque?</p>
         <a href="#" class="btn">See what we have</a>
