:art: style(featured): Add featured section styling

--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
           <h2 class="section-title">Featured products</h2>
           <div class="split">
             <a href="#" class="featured__item">
-              <img src="./assets/img/shoe-4.png" alt="Red NIKE Air" class="featured__img">
-              <p class="featured__details"></p>
+              <img src="./assets/img/shoe-4.png" alt="NIKE Air Jordan 12 Red suede" class="featured__img">
+              <p class="featured__details"><span class="price">$99</span>Shoe name</p>
             </a>
             
             <a href="#" class="featured__item">
-              <img src="./assets/img/shoe-5.png" alt="Gray ADIDAS" class="featured__img">
-              <p class="featured__details"></p>
+              <img src="./assets/img/shoe-5.png" alt="ADIDAS Ultraboost" class="featured__img">
+              <p class="featured__details"><span class="price">$99</span>Shoe name</p>
             </a>
             
             <a href="#" class="featured__item">
-              <img src="./assets/img/shoe-6.png" alt="Blue NIKE Air Jordan" class="featured__img">
-              <p class="featured__details"></p>
+              <img src="./assets/img/shoe-6.png" alt="NIKE Air Jordan 1 x Off-White" class="featured__img">
+              <p class="featured__details"><span class="price">$99</span>Shoe name</p>
             </a>
           </div>
         </div>
