--- a/index.html
+++ b/index.html
@@ -44,25 +44,25 @@
       <section class="our-products">
         <div class="container">
           <h2 class="section-title">Our products</h2>
-          <article class="product">
+          <article class="product shoe-red spacing">
             <img src="./assets/img/shoe-1.png" alt="Crimsom VANS" class="product__image">
-            <h3 class="product__title"></h3>
-            <p class="product__description"></p>
-            <a href="" class="btn"></a>
+            <h3 class="product__title">A really nice shoe</h3>
+            <p class="product__description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam minima cupiditate quas neque vero cum, molestias eligendi porro nesciunt officia?</p>
+            <a href="" class="btn">Buy now</a>
           </article>
           
-          <article class="product">
+          <article class="product shoe-white spacing">
             <img src="./assets/img/shoe-2.png" alt="White PUMA Glyde" class="product__image">
-            <h3 class="product__title"></h3>
-            <p class="product__description"></p>
-            <a href="" class="btn"></a>
+            <h3 class="product__title">A really nice shoe</h3>
+            <p class="product__description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam minima cupiditate quas neque vero cum, molestias eligendi porro nesciunt officia?</p>
+            <a href="" class="btn">Buy now</a>
           </article>
           
-          <article class="product">
+          <article class="product shoe-blue spacing">
             <img src="./assets/img/shoe-3.png" alt="White  undistinguishable sneaker" class="product__image">
-            <h3 class="product__title"></h3>
-            <p class="product__description"></p>
-            <a href="" class="btn"></a>
+            <h3 class="product__title">A really nice shoe</h3>
+            <p class="product__description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam minima cupiditate quas neque vero cum, molestias eligendi porro nesciunt officia?</p>
+            <a href="" class="btn">Buy now</a>
           </article>
         </div>
       </section>
