:art: style: Add custom properties

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
           </article>
           
           <article class="product shoe-white spacing">
-            <img src="./assets/img/shoe-2.png" alt="White PUMA Glyde" class="product__image">
+            <img src="./assets/img/shoe-2.png" alt="White PUMA Clyde Graffiti" class="product__image">
             <h3 class="product__title">A really nice shoe</h3>
             <p class="product__description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam minima cupiditate quas neque vero cum, molestias eligendi porro nesciunt officia?</p>
             <a href="" class="btn">Buy now</a>
           </article>
           
           <article class="product shoe-blue spacing">
-            <img src="./assets/img/shoe-3.png" alt="White  undistinguishable sneaker" class="product__image">
+            <img src="./assets/img/shoe-3.png" alt="White unbranded leather sneaker" class="product__image">
             <h3 class="product__title">A really nice shoe</h3>
             <p class="product__description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam minima cupiditate quas neque vero cum, molestias eligendi porro nesciunt officia?</p>
             <a href="" class="btn">Buy now</a>
