--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <a href="" class="btn">Buy now</a>
           </article>
           
-          <article class="product shoe-white spacing">
+          <article class="product shoe-white shoe--left spacing">
             <img src="./assets/img/shoe-2.png" alt="White PUMA Clyde Graffiti" class="product__image">
             <h3 class="product__title">A really nice shoe</h3>
             <p class="product__description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam minima cupiditate quas neque vero cum, molestias eligendi porro nesciunt officia?</p>
